# toonkit

./: .gitignore  BLOG_POST.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES_README.md  INSTRUCCIONES.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  PUBLISH.md  QUICKSTART.md  README.md  REDDIT_POST.md  example_complete.py  example_complete_llm.py  example_output.txt  integration_examples.py  pyproject.toml  roi_calculator.py
.github/workflows/: ci.yml  tests.yml
examples/: __init__.py  advanced_config.py  basic_usage.py  benchmark_example.py  streaming_example.py  test_data.json
tests/: __init__.py  conftest.py  test_benchmark.py  test_decoder.py  test_encoder.py  test_fuzz.py  test_roundtrip.py
toonkit/: __init__.py  cli.py
toonkit/benchmark/: __init__.py  tokenizer.py
toonkit/core/: __init__.py  decoder.py  encoder.py  types.py
