[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toonkit"
version = "0.1.1"
description = "Production-grade JSON ↔ TOON converter with multi-model tokenization benchmarks and streaming support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AEDIA", email = "aedia@aedia.es"}
]
keywords = ["toon", "json", "llm", "tokenization", "ai", "benchmark", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

dependencies = [
    "tiktoken>=0.6.0",
    "anthropic>=0.18.0",
    "sentencepiece>=0.1.99",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.98.0",  # For fuzz testing
    "ruff>=0.2.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
]

[project.scripts]
toonkit = "toonkit.cli:main"

[project.urls]
Homepage = "https://github.com/aedia/toonkit"
Documentation = "https://github.com/aedia/toonkit#readme"
Repository = "https://github.com/aedia/toonkit"
Issues = "https://github.com/aedia/toonkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["toonkit*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --cov=toonkit --cov-report=term-missing --cov-report=html"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fuzz: marks tests as fuzz tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "T20", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

